--- a/firebase1/pubspec.yaml
+++ b/firebase1/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
   fluttertoast: ^8.2.5
+  flutter_firebase_recaptcha: ^1.0.2
+  firebase_database:
+  firebase_app_check: ^0.2.2+5
 
 dev_dependencies:
   flutter_test:
