--- a/firebase1/pubspec.yaml
+++ b/firebase1/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   cloud_firestore: ^4.17.2
   fluttertoast: ^8.2.5
   flutter_firebase_recaptcha: ^1.0.2
-  firebase_database:
+  loading_indicator: ^3.1.1
   firebase_app_check: ^0.2.2+5
+  firebase_database: ^10.5.5
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
