--- a/firebase1/pubspec.yaml
+++ b/firebase1/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   firebase_core: ^2.30.1
-  firebase_storage: ^11.7.4
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
   fluttertoast: ^8.2.5
@@ -44,6 +43,7 @@ dependencies:
   loading_indicator: ^3.1.1
   firebase_app_check: ^0.2.2+5
   firebase_database: ^10.5.5
+  intl_phone_field: ^3.1.0
 
 dev_dependencies:
   flutter_test:
