--- a/firebase1/pubspec.yaml
+++ b/firebase1/pubspec.yaml
@@ -46,6 +46,14 @@ dependencies:
   intl_phone_field: ^3.1.0
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
   flutter_test:
     sdk: flutter
 
