--- a/firebase1/pubspec.yaml
+++ b/firebase1/pubspec.yaml
@@ -47,11 +47,12 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
+  change_app_package_name: ^1.1.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/app_logo.png"
+  image_path: "assets/images/app12.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
   flutter_test:
