--- a/firebase1/pubspec.yaml
+++ b/firebase1/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_app_check: ^0.2.2+5
   firebase_database: ^10.5.5
   intl_phone_field: ^3.1.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
